--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<title>Jack's Webpage</title>
-		<link rel="stylesheet" href="/style.css">
+		<link rel="stylesheet" href="./style.css">
 	</head>
 	
 	<body>
@@ -14,8 +14,8 @@
 			<h2 id="header-title">Jack's Webpage</h2>
 			<div>
 				<ul id="links" class="flex">
-					<li><a href="/index.html">Home</a></li>
-					<li><a href="/pokedex.html">Pokedex</a></li>
+					<li><a href="./index.html">Home</a></li>
+					<li><a href="./pokedex.html">Pokedex</a></li>
 					<li><a href="">Games</a></li>
 					<li><a href="">History</a></li>
 				</ul>
@@ -32,9 +32,9 @@
 			game has to be Pokemon Black and White 2.
 			</p>
 			<div id="image-container" class="flex">
-				<img id="image1" src="/B2_Boxart.jpg" alt="Black 2 Boxart">
-				<img id="image2" src="/W2_Boxart.png" alt="White 2 Boxart">
-				<img id="image3" src="/Marine_Tube.jpg" alt="The Marine Tube">
+				<img id="image1" src="./B2_Boxart.jpg" alt="Black 2 Boxart">
+				<img id="image2" src="./W2_Boxart.png" alt="White 2 Boxart">
+				<img id="image3" src="./Marine_Tube.jpg" alt="The Marine Tube">
 			</div>
 			
 			<ul>
