--- a/pokedex.html
+++ b/pokedex.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<title>Jack's Webpage</title>
-		<link rel="stylesheet" href="./style.css">
+		<link rel="stylesheet" href="./style-pokedex.css">
 	</head>
 	
 	<body>
@@ -16,14 +16,38 @@
 				<ul id="links" class="flex">
 					<li><a href="./index.html">Home</a></li>
 					<li><a href="./pokedex.html">Pokedex</a></li>
-					<li><a href="">Games</a></li>
-					<li><a href="">History</a></li>
 				</ul>
 			</div>
 		</header>
 	
-	
 		<main class="flex column">
+      <h1>Pokedex</h1>
+                             
+      <div id="card-container" class="flex">
+        <div class="card flex column">
+          <div class="card_img">
+            <img src="./snivy.jpg" alt="">
+          </div>
+          <p>Snivy</p>
+          <p>Grass Starter</p>
+       </div>
+        <div class="card flex column">
+          <div class="card_img">
+            <img src="./oshawott.jpg" alt="">
+          </div>
+          <p>Oshawott</p>
+          <p>Water Starter</p>
+        </div>
+        <div class="card flex column">
+          <div class="card_img">
+            <img src="./tepig.jpg" alt="">
+          </div>
+          <p>Tepig</p>
+          <p>Fire Starter</p>
+        </div>
+      </div>
+      <button><a href="./index.html">Return Home</a></button>
 		</main>
+                             
 	</body>
 </html>
